Tailwind 08 -> Fix: Mobile Menu

--- a/Tailwind/08-projeto/Forest-exercicio/src/index.html
+++ b/Tailwind/08-projeto/Forest-exercicio/src/index.html
@@ -32,7 +32,7 @@
       </a>
       <nav
         id="mobileMenu"
-        class="flex lg:block items-center z-40 max-lg:fixed max-lg:w-full max-lg:inset-0"
+        class="lg:block hidden items-center z-40 max-lg:fixed max-lg:w-full max-lg:inset-0"
       >
         <div class="fixed lg:hidden inset-0 bg-verde-950/40 backdrop-blur-md"></div>
         <ul
