HTML/CSS 07 -> Header CSS + Estilos Globais

--- a/HTML-e-CSS-para_iniciantes/07-projeto-portfolio/index.html
+++ b/HTML-e-CSS-para_iniciantes/07-projeto-portfolio/index.html
@@ -13,13 +13,13 @@
     <title>Lobo</title>
   </head>
   <body>
-    <header>
+    <header class="container header">
       <img src="./_img/marca.svg" alt="logo" />
       <nav>
-        <ul>
-          <li>experiência</li>
-          <li>formação</li>
-          <li>contato</li>
+        <ul class="header-nav">
+          <li><a href="#experiencia">experiência</a></li>
+          <li><a href="#formacao">formação</a></li>
+          <li><a href="#contato">contato</a></li>
         </ul>
       </nav>
     </header>
