HTML/CSS 07 -> CSS nas sessões 'principal' e 'experiencia'

--- a/HTML-e-CSS-para_iniciantes/07-projeto-portfolio/index.html
+++ b/HTML-e-CSS-para_iniciantes/07-projeto-portfolio/index.html
@@ -16,7 +16,7 @@
     <header class="container header">
       <img src="./_img/marca.svg" alt="logo" />
       <nav>
-        <ul class="header-nav">
+        <ul class="header-nav c13">
           <li><a href="#experiencia">experiência</a></li>
           <li><a href="#formacao">formação</a></li>
           <li><a href="#contato">contato</a></li>
@@ -24,25 +24,27 @@
       </nav>
     </header>
 
-    <main>
+    <main class="container principal">
       <img src="./_img/perfil.jpg" alt="perfil" />
-      <div>
-        <h1>Desenvolvedor Front End & UX/UI Designer</h1>
-        <p>Localizado no Rio de janeiro 🏖</p>
+      <div class="principal-content">
+        <img src="./_img/detalhe.svg" alt="" />
+        <h1 class="c13">Desenvolvedor Front End & UX/UI Designer</h1>
+        <p class="c10">Localizado no Rio de Janeiro 🏖</p>
       </div>
     </main>
 
-    <section>
-      <h2>experiência</h2>
-      <div>
-        <p>
+    <section id="experiencia" class="container">
+      <h2 class="c3">experiência</h2>
+      <div class="exp-content">
+        <p class="c10">
           Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>,
           <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos web como a rede
           social Dogs eu trabalhei no <strong>UX</strong> e <strong>UI Design</strong> do projeto.
         </p>
-        <div>
-          <div>
-            <div>
+        <div class="exp-lista">
+          <div class="exp-item">
+            <div class="item-proj">
+              <span>2045</span>
               <h3>bikcraft</h3>
               <p>
                 Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e
@@ -51,7 +53,7 @@
             </div>
             <div>
               <h3>desenvolvedor júnior</h3>
-              <ul>
+              <ul class="item-linguagem c13">
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>JavaScript</li>
@@ -61,8 +63,9 @@
             </div>
           </div>
 
-          <div>
-            <div>
+          <div class="exp-item">
+            <div class="item-proj">
+              <span>2044-45</span>
               <h3>surfbot</h3>
               <p>
                 Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e
@@ -71,7 +74,7 @@
             </div>
             <div>
               <h3>estagiário</h3>
-              <ul>
+              <ul class="item-linguagem c13">
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>JavaScript</li>
@@ -79,8 +82,9 @@
             </div>
           </div>
 
-          <div>
-            <div>
+          <div class="exp-item">
+            <div class="item-proj">
+              <span>2044</span>
               <h3>brafé</h3>
               <p>
                 Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e
@@ -89,7 +93,7 @@
             </div>
             <div>
               <h3>voluntário</h3>
-              <ul>
+              <ul class="item-linguagem c13">
                 <li>Email Marketing</li>
                 <li>HTML</li>
                 <li>UX Deisgn</li>
@@ -106,8 +110,9 @@
         <h2>formação</h2>
         <div>
           <p>
-            Minha mais recente experiência acadêmica foi o mestrado 🎓 que fiz no exterior em UX
-            Design. Além disso me mantenho sempre atualizado com cursos intensivos online.
+            Minha mais recente experiência acadêmica foi o <strong>mestrado</strong> 🎓 que fiz no
+            exterior em <strong>UX Design</strong>. Além disso me mantenho sempre atualizado com
+            cursos intensivos online.
           </p>
 
           <div>
