HTML/CSS 07 -> CSS na formação

--- a/HTML-e-CSS-para_iniciantes/07-projeto-portfolio/index.html
+++ b/HTML-e-CSS-para_iniciantes/07-projeto-portfolio/index.html
@@ -105,43 +105,43 @@
       </div>
     </section>
 
-    <section>
-      <div>
+    <section id="formacao">
+      <div class="container formacao">
         <h2>formação</h2>
-        <div>
-          <p>
+        <div class="formacao-content">
+          <p class="c6">
             Minha mais recente experiência acadêmica foi o <strong>mestrado</strong> 🎓 que fiz no
             exterior em <strong>UX Design</strong>. Além disso me mantenho sempre atualizado com
             cursos intensivos online.
           </p>
 
-          <div>
-            <div>
-              <h4>bacharel</h4>
+          <div class="formacao-cursos">
+            <div class="formacao-curso">
+              <h5>bacharel</h5>
               <p>Administração de Empresas</p>
               <h4>uffrj</h4>
             </div>
 
-            <div>
-              <h4>tecnólogo</h4>
+            <div class="formacao-curso">
+              <h5>tecnólogo</h5>
               <p>Design Digital</p>
               <h4>Infnet</h4>
             </div>
 
-            <div>
-              <h4>mestre</h4>
+            <div class="formacao-curso">
+              <h5>mestre</h5>
               <p>User Experience Design</p>
               <h4>ucll</h4>
             </div>
           </div>
 
-          <div>
+          <div class="formacao-infos">
             <h4>cursos intensivos</h4>
             <p>UX Design & UI Design <span>56h</span></p>
             <p>Front End para Iniciantes <span>72h</span></p>
           </div>
 
-          <div>
+          <div class="formacao-infos">
             <h4>idiomas</h4>
             <p>Ingês <span>/ fluente</span></p>
             <p>Espanhol <span>/ Intermediário</span></p>
