--- a/HTML-e-CSS-para_iniciantes/07-projeto-portfolio/index.html
+++ b/HTML-e-CSS-para_iniciantes/07-projeto-portfolio/index.html
@@ -150,20 +150,21 @@
       </div>
     </section>
 
-    <footer>
-      <div>
-        <div>
+    <footer id="contato">
+      <div class="container">
+        <img src="./_img/detalhe.svg" >
+        <div class="footer-content">
           <p>
             Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma
             conversa 👋
           </p>
-          <ul>
+          <ul class="contato">
             <li>lobo@gmail.com</li>
             <li>+55 21 9999-9999</li>
             <li>@origamid.cursos</li>
           </ul>
         </div>
-        <p>Lobo. Alguns direitos reservados.</p>
+        <p class="direitos">Lobo. Alguns direitos reservados.</p>
       </div>
     </footer>
   </body>
